[gd_scene load_steps=7 format=3 uid="uid://cij5cwmh1djkb"]

[ext_resource type="Script" uid="uid://c6eslokit3d8u" path="res://script/entity/wolf.gd" id="1_2of7n"]
[ext_resource type="Texture2D" uid="uid://b4dafmc18bb7g" path="res://asset/wolf.png" id="2_ic2k0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1rtcx"]
radius = 41.1608

[sub_resource type="Animation" id="Animation_onwaf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1rtcx"]
resource_name = "idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6vajd"]
_data = {
&"RESET": SubResource("Animation_onwaf"),
&"idle": SubResource("Animation_1rtcx")
}

[node name="wolf" type="Area2D"]
z_index = 10
collision_layer = 4
collision_mask = 3
script = ExtResource("1_2of7n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.765663, 0.765663)
texture = ExtResource("2_ic2k0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1rtcx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6vajd")
}
autoplay = "idle"

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
